src/objects/Quote/Quote.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>