src/objects/Quote/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select a Customer Name that already exists in our database. If the customer does not exist.  Please email Betty.Dea@Finisar.com so she can set it up.  This should be the end customer, not a Contract Manufacturer, VAR, or SI. We have other fields for these</inlineHelpText>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Top Level Account</value>
        </filterItems>
        <filterItems>
            <field>Account.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Account #)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>