src/objects/Quote/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>used in reports</description>
    <formula>IF(  ISPICKVAL( $User.UserType , &apos;PowerPartner&apos;) ,
 BLANKVALUE( Account__r.Name , &quot;N/A&quot;) 

,BLANKVALUE( Account__r.Name , &quot;N/A&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>