src/objects/Quote/fields/Account_Num__c.field-meta.xml
<CustomField>
    <fullName>Account_Num__c</fullName>
    <formula>Account__r.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account #</label>
    <type>Text</type>
</CustomField>