src/objects/Quote/fields/Additional_CM__c.field-meta.xml
<CustomField>
    <fullName>Additional_CM__c</fullName>
    <label>Additional CM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>