src/objects/Quote/fields/BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnit__c</fullName>
    <label>Business Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>