src/objects/Quote/fields/Class_Level__c.field-meta.xml
<CustomField>
    <fullName>Class_Level__c</fullName>
    <inlineHelpText>0 = Prototype
1 = New product w/ new process
2 = New product
3 = Modified product</inlineHelpText>
    <label>Class Level for Development Programs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>