src/objects/Quote/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <formula>Contact.Email</formula>
    <inlineHelpText>Read Only Field populated and maintained on tha Contact Rocrd</inlineHelpText>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>