src/objects/Quote/fields/Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Contact_Fax__c</fullName>
    <formula>Contact.Fax</formula>
    <inlineHelpText>Read Only Field populated and updated on the Contact Record</inlineHelpText>
    <label>Contact Fax</label>
    <type>Text</type>
</CustomField>