src/objects/Quote/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <formula>Contact.Phone</formula>
    <inlineHelpText>Read Only Field populated and updated on the Contact Record</inlineHelpText>
    <label>Contact Phone</label>
    <type>Text</type>
</CustomField>