src/objects/Quote/fields/Contract_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Contract_Manufacturer__c</fullName>
    <label>Contract Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contract_Manufacturer</valueSetName>
    </valueSet>
</CustomField>