src/objects/Quote/fields/Count_Of_Line_Item_Status_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Line_Item_Status_Rejected__c</fullName>
    <label>Count Of Line Item Status Rejected</label>
    <summaryFilterItems>
        <field>Quote_Item__c.Line_Status__c</field>
        <operation>equals</operation>
        <value>Approval Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote_Item__c.Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>