src/objects/Quote/fields/Count_Of_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Line_Items__c</fullName>
    <label>Count Of Line Items</label>
    <summaryFilterItems>
        <field>Quote_Item__c.Line_Status__c</field>
        <operation>equals</operation>
        <value>Approval Pending, Approval Rejected, Approved, Draft, Approval Canceled</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote_Item__c.Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>