src/objects/Quote/fields/Count_of_Line_Items_Approved__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Line_Items_Approved__c</fullName>
    <label>Count of Line Items Approved</label>
    <summaryFilterItems>
        <field>Quote_Item__c.Line_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote_Item__c.Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>