src/objects/Quote/fields/Count_Of_Line_Items_Fields_Not_Approved__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Line_Items_Fields_Not_Approved__c</fullName>
    <description>Roll of summary field of total line items not approved</description>
    <label>Count Of Line Items Fields Not Approved</label>
    <summaryFilterItems>
        <field>Quote_Item__c.Line_Status__c</field>
        <operation>equals</operation>
        <value>Approval Pending, Draft, Approval Canceled</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote_Item__c.Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>