src/objects/Quote/fields/Count_of_line_Status_Not_in_Approval__c.field-meta.xml
<CustomField>
    <fullName>Count_of_line_Status_Not_in_Approval__c</fullName>
    <label>Count of line Status Not in Approval</label>
    <summaryFilterItems>
        <field>Quote_Item__c.Line_Status__c</field>
        <operation>equals</operation>
        <value>Lost - Delivery, Lost - Price, Lost - Technical, One Time Order Processed, Order Received, Order Submitted, Approval Canceled, Project Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote_Item__c.Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>