src/objects/Quote/fields/Custom_or_modified_part_for_defense__c.field-meta.xml
<CustomField>
    <fullName>Custom_or_modified_part_for_defense__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a custom or modified part for a defense application?</description>
    <inlineHelpText>If Yes, drawings restricted per 130- 9055-001 Para. 9.0</inlineHelpText>
    <label>Custom or modified part for defense?</label>
    <type>Checkbox</type>
</CustomField>