src/objects/Quote/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <formula>IF(ISBLANK( Opportunity.Id) ,&apos;Test&apos;,&apos;tetst&apos;)</formula>
    <inlineHelpText>Read Only Field populated and maintianed on the Account Record</inlineHelpText>
    <label>Customer ID</label>
    <type>Text</type>
</CustomField>