src/objects/Quote/fields/Delivery_Charge__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Charge__c</fullName>
    <label>Delivery Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>