src/objects/Quote/fields/Delivery_Terms__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Terms__c</fullName>
    <inlineHelpText>Copies value from Account, or type new value to override.</inlineHelpText>
    <label>Delivery Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>