src/objects/Quote/fields/Development_Costing_Attached__c.field-meta.xml
<CustomField>
    <fullName>Development_Costing_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For development projects, is costing attached?</inlineHelpText>
    <label>Development Costing Attached?</label>
    <type>Checkbox</type>
</CustomField>