src/objects/Quote/fields/Domestic_Quote_Clause__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Quote_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Domestic Quote Clause</label>
    <type>Checkbox</type>
</CustomField>