src/objects/Quote/fields/Ex_Works__c.field-meta.xml
<CustomField>
    <fullName>Ex_Works__c</fullName>
    <label>Ex Works</label>
    <length>100</length>
    <type>Text</type>
</CustomField>