src/objects/Quote/fields/FCA__c.field-meta.xml
<CustomField>
    <fullName>FCA__c</fullName>
    <label>FCA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Saxonburg, PA, USA</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Suzhou, CN</fullName>
            </value>
            <value>
                <fullName>Door-to-door</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>