src/objects/Quote/fields/Fixed_Firm_Quote_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Firm_Quote_Amount__c</fullName>
    <description>Fill out the quote amount for approvals</description>
    <label>Highest Firm/Fixed Quote USD Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>