src/objects/Quote/fields/Global_Ultimate_Account__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Global Ultimate Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Global Parent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Global Ultimate Account)</relationshipLabel>
    <relationshipName>Quotes3</relationshipName>
    <type>Lookup</type>
</CustomField>