src/objects/Quote/fields/GPM_35__c.field-meta.xml
<CustomField>
    <fullName>GPM_35__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If GPM is less than 35% for any pricing category more than $15K check the box.</description>
    <inlineHelpText>If GPM is less than 35% for any pricing category more than $15K check the box.</inlineHelpText>
    <label>GPM &lt; 35%</label>
    <type>Checkbox</type>
</CustomField>