src/objects/Quote/fields/Highyag_Repair_Clause__c.field-meta.xml
<CustomField>
    <fullName>Highyag_Repair_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Highyag Repair Clause</label>
    <type>Checkbox</type>
</CustomField>