src/objects/Quote/fields/Highyag_Total_VAT__c.field-meta.xml
<CustomField>
    <fullName>Highyag_Total_VAT__c</fullName>
    <formula>TotalPrice  +( TotalPrice *(  Highyag_VAT_Pct__c  /100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Highyag Total (VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>