src/objects/Quote/fields/Highyag_VAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>Highyag_VAT_Amount__c</fullName>
    <formula>(TotalPrice *( Highyag_VAT_Pct__c /100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Highyag VAT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>