src/objects/Quote/fields/Highyag_VAT_Pct__c.field-meta.xml
<CustomField>
    <fullName>Highyag_VAT_Pct__c</fullName>
    <label>Highyag VAT Pct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>