src/objects/Quote/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <inlineHelpText>Used to record internal notes related to the Quote.</inlineHelpText>
    <label>Internal Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>