src/objects/Quote/fields/International_Quote_Clause__c.field-meta.xml
<CustomField>
    <fullName>International_Quote_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International Quote Clause</label>
    <type>Checkbox</type>
</CustomField>