src/objects/Quote/fields/Is_tooling_addressed__c.field-meta.xml
<CustomField>
    <fullName>Is_tooling_addressed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For production volume, is tooling addressed?</description>
    <inlineHelpText>For production volume, is tooling addressed?</inlineHelpText>
    <label>Is tooling addressed</label>
    <type>Checkbox</type>
</CustomField>