src/objects/Quote/fields/ITAR__c.field-meta.xml
<CustomField>
    <fullName>ITAR__c</fullName>
    <formula>IF( ISBLANK( Opportunity.Id  ) ,&apos;&apos;, TEXT(Opportunity.ITAR__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ITAR</label>
    <type>Text</type>
</CustomField>