src/objects/Quote/fields/ITAR_Language__c.field-meta.xml
<CustomField>
    <fullName>ITAR_Language__c</fullName>
    <description>ITAR language to be inserted into customer quotation template via Conga (field will not appear on quote page layout)</description>
    <label>ITAR Language</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>