src/objects/Quote/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <inlineHelpText>Input information or notes here, which the quote approvers will see when they review the quote.</inlineHelpText>
    <label>Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>