src/objects/Quote/fields/Key_account__c.field-meta.xml
<CustomField>
    <fullName>Key_account__c</fullName>
    <formula>!(Account__r.Key_Account__c = False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key account</label>
    <type>Checkbox</type>
</CustomField>