src/objects/Quote/fields/Legacy_Id_Quote__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Id_Quote__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>