src/objects/Quote/fields/Link_to_Quote_on_Server__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Quote_on_Server__c</fullName>
    <label>Link to Military Quote</label>
    <type>Url</type>
</CustomField>