src/objects/Quote/fields/Manufacture_Location__c.field-meta.xml
<CustomField>
    <fullName>Manufacture_Location__c</fullName>
    <label>Manufacture Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Singapore</fullName>
                <default>true</default>
                <label>Singapore</label>
            </value>
            <value>
                <fullName>Saxonburg, PA, USA</fullName>
            </value>
            <value>
                <fullName>Singapore / Saxonburg, PA, USA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>