src/objects/Quote/fields/Manufacturing_Cost_Attached__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Cost_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If available for manufactured products (not development)</inlineHelpText>
    <label>Manufacturing Cost Attached?</label>
    <type>Checkbox</type>
</CustomField>