src/objects/Quote/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <description>Pre-populated from the opportunity.</description>
    <inlineHelpText>Total margin on the opportunity. Pre-populated, does not include additional price breaks or line items that are not included on the opportunity.</inlineHelpText>
    <label>Margin</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>