src/objects/Quote/fields/No_of_line_items__c.field-meta.xml
<CustomField>
    <fullName>No_of_line_items__c</fullName>
    <label>No of line items</label>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>