src/objects/Quote/fields/Non_Released__c.field-meta.xml
<CustomField>
    <fullName>Non_Released__c</fullName>
    <formula>IF( ISBLANK(Opportunity.Id  ) , false, Opportunity.Non_Released_Product__c)</formula>
    <inlineHelpText>This comes over from the Opportunity.</inlineHelpText>
    <label>Non-Released Product</label>
    <type>Checkbox</type>
</CustomField>