src/objects/Quote/fields/Non_U_S_Customer__c.field-meta.xml
<CustomField>
    <fullName>Non_U_S_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this for a Non-U.S. Customer?</description>
    <inlineHelpText>If Yes to both questions, ITAR export license and Data transmission requirements apply.   See MI drawing 130-0248-001 Para 6.2.2</inlineHelpText>
    <label>Non-U.S. Customer?</label>
    <type>Checkbox</type>
</CustomField>