src/objects/Quote/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Account manager notes; to be used on quote template</description>
    <inlineHelpText>Will show on quote PDF</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>