src/objects/Quote/fields/Opportunity_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Nbr__c</fullName>
    <formula>IF( ISBLANK( Opportunity.Id  ) ,&apos; &apos;, Opportunity.Opportunity_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Nbr</label>
    <type>Text</type>
</CustomField>