src/objects/Quote/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <formula>IF( ISBLANK( OpportunityId ) , null, Opportunity.Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Number</label>
    <type>Text</type>
</CustomField>