src/objects/Quote/fields/opportunity_record_type__c.field-meta.xml
<CustomField>
    <fullName>opportunity_record_type__c</fullName>
    <formula>IF( ISBLANK( Opportunity.Id  ) ,&apos; &apos;,  Opportunity.RecordType.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity record type</label>
    <type>Text</type>
</CustomField>