src/objects/Quote/fields/Oracle_ref_number_for_reprocessing__c.field-meta.xml
<CustomField>
    <fullName>Oracle_ref_number_for_reprocessing__c</fullName>
    <label>Oracle ref number for reprocessing</label>
    <length>50</length>
    <type>Text</type>
</CustomField>