src/objects/Quote/fields/Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Email__c</fullName>
    <label>Owner Email</label>
    <type>Email</type>
</CustomField>