src/objects/Quote/fields/OwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>OwnerEmail__c</fullName>
    <label>Owner Email</label>
    <type>Email</type>
</CustomField>