src/objects/Quote/fields/Price_Clause__c.field-meta.xml
<CustomField>
    <fullName>Price_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Clause</label>
    <type>Checkbox</type>
</CustomField>