src/objects/Quote/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <formula>IF( PriceListSelected__c &lt;&gt;&apos;&apos;, PriceListSelected__c ,
	IF(Site__r.Price_List__c &lt;&gt; &apos;&apos;, Site__r.Price_List__c,
		IF(Customer__r.Price_List__c &lt;&gt; &apos;&apos;,Customer__r.Price_List__c ,
			IF( Account__r.Price_List__c &lt;&gt; &apos;&apos;,Account__r.Price_List__c ,
				IF( Sales_Channel__r.Sales_Channel_Code__c = &apos;VAR SYNNEX_US&apos;  , 
					IF( CreatedBy.Profile.Name = &quot;Finisar Partner Community User&quot;, &apos;FNSR VAR REP PRICE LIST&apos;,
						IF(CreatedBy.Profile.Name = &quot;Finisar Partner Community User (Disti Users)&quot;, &apos;FNSR VAR DISTI PRICE LIST&apos;, &apos;FNSR VAR RSM PRICE LIST&apos;) 
					),
					IF( CreatedBy.Profile.Name = &quot;Finisar Partner Community User&quot;, &apos;FNSR REP PRICE LIST&apos;,
					IF(CreatedBy.Profile.Name = &quot;Finisar Partner Community User (Disti Users)&quot;, &apos;FNSR DISTRIBUTOR PRICE LIST&apos;, &apos;FNSR RSM PRICE LIST&apos;)
				)
			)
		)
	)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price List</label>
    <type>Text</type>
</CustomField>