src/objects/Quote/fields/PriceListSelected__c.field-meta.xml
<CustomField>
    <fullName>PriceListSelected__c</fullName>
    <label>PriceListSelected</label>
    <length>60</length>
    <type>Text</type>
</CustomField>