src/objects/Quote/fields/Pricing_Effective_By__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Effective_By__c</fullName>
    <label>Pricing Effective By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Date</fullName>
            </value>
            <value>
                <fullName>Ship Date</fullName>
                <default>true</default>
                <label>Ship Date</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>