src/objects/Quote/fields/Pricing_Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Effective_End_Date__c</fullName>
    <label>Pricing Effective End Date</label>
    <type>Date</type>
</CustomField>