src/objects/Quote/fields/Pricing_Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Effective_Start_Date__c</fullName>
    <inlineHelpText>This field is only relevant for Blanket Price Agreement quotes. Once the quote lines are approved, the customer price list will be updated with the new price using this Pricing Effective Start Date. This has to be today&apos;s date or a future date.</inlineHelpText>
    <label>Pricing Effective Start Date</label>
    <type>Date</type>
</CustomField>