src/objects/Quote/fields/Primary_Sales_Group__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Group__c</fullName>
    <label>Primary Sales Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Primary_Sales_Group</valueSetName>
    </valueSet>
</CustomField>