src/objects/Quote/fields/PrimarySalesperson__c.field-meta.xml
<CustomField>
    <fullName>PrimarySalesperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Salesperson</description>
    <inlineHelpText>Select the Finisar Regional Sales Manager (RSM) who should be approving this quote.</inlineHelpText>
    <label>Primary Salesperson</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>startsWith</operation>
            <value>RSM</value>
        </filterItems>
        <filterItems>
            <field>User.Alias</field>
            <operation>equals</operation>
            <value>YLee</value>
        </filterItems>
        <filterItems>
            <field>User.Alias</field>
            <operation>equals</operation>
            <value>cleow</value>
        </filterItems>
        <filterItems>
            <field>User.Alias</field>
            <operation>equals</operation>
            <value>KFalta</value>
        </filterItems>
        <filterItems>
            <field>User.Alias</field>
            <operation>equals</operation>
            <value>MRobin</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>