src/objects/Quote/fields/Quote_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Expiration_Date__c</fullName>
    <defaultValue>Today() +60</defaultValue>
    <label>Quote Expiration Date</label>
    <type>Date</type>
</CustomField>